--- a/changelog.html
+++ b/changelog.html
@@ -66,7 +66,7 @@
 <li>Added travis CI.</li>
 <li>Development moved to github.</li>
 <li>Added sphinx docs.</li>
-<li>Removed thew <tt class="docutils literal"><span class="pre">web</span></tt> module.</li>
+<li>Removed the <tt class="docutils literal"><span class="pre">web</span></tt> module.</li>
 <li>Better period calculations.</li>
 <li><strong>29 regression tests</strong> with <strong>69%</strong> coverage.</li>
 </ul>
